[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schwab_api_wrapper"
version = "0.2.0"
authors = [
  { name="Owen Gordon", email="owengordon330@outlook.com" },
]
description = "A wrapper package around the schwab http api"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/OwenGordon/schwab-api-wrapper"
Issues = "https://github.com/OwenGordon/schwab-api-wrapper/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]